# LLM

./: .gitignore  CMakeLists.txt  README.md
data/: download_model.py  tensorflow_to_hdf5.py
src/: io.cu  io.cuh  kernels.cu  kernels.cuh  layer.cu  layer.cuh  llm.cu  llm.cuh  main.cu  tokenizer.cu  tokenizer.cuh  utils.cu  utils.cuh
